<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/HeaderText"
            android:text="@string/main_header_calories" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/main_header_protein" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/main_header_fat" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/main_header_carbs" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/main_header_water" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_macro_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/main_header_container">

        <TextView
            android:id="@+id/main_macro_calories"
            style="@style/MacroValueText"
            android:text="@string/main_macro_filler_calories" />

        <TextView
            android:id="@+id/main_macro_protein"
            style="@style/MacroValueText"
            android:text="@string/main_macro_filler_grams" />

        <TextView
            android:id="@+id/main_macro_fat"
            style="@style/MacroValueText"
            android:text="@string/main_macro_filler_grams" />

        <TextView
            android:id="@+id/main_macro_carbs"
            style="@style/MacroValueText"
            android:text="@string/main_macro_filler_grams" />

        <TextView
            android:id="@+id/main_macro_water"
            style="@style/MacroValueText"
            android:text="@string/main_macro_filler_litres" />
    </LinearLayout>

    <Button
        android:id="@+id/main_button_add_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_macro_container"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="20dp"
        android:text="@string/main_button_add_food" />

    <Button
        android:id="@+id/main_button_add_water"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/main_button_add_food"
        app:layout_constraintTop_toBottomOf="@id/main_macro_container"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="20dp"
        android:text="@string/main_button_add_water" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_food_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_button_add_food"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>